feat: implementar registro de usuario separado del backend

--- a/Frontend/views/dashboard.html
+++ b/Frontend/views/dashboard.html
@@ -56,7 +56,7 @@
             <div class="card-body">
                 <h1 class="card-title">Bienvenido al Dashboard</h1>
                 <!-- <p class="card-text" id="welcome-message">Hola, <%= userName %>!</p> -->
-                <p class="card-text" id="welcome-message">Hola, <span id="user-name"></span>!</p>
+                <p class="card-text" id="welcome-message">¡Hola, <span id="user-name"></span>!</p>
                 <p class="card-text">Solo los usuarios logueados pueden ver esta página.</p>
             </div>
         </div>
