--- a/Frontend/views/index.html
+++ b/Frontend/views/index.html
@@ -52,7 +52,7 @@
                         <div class="mt-5">
                             <!-- <a href="/auth/login" class="btn btn-custom btn-lg mx-2">Iniciar Sesión</a> -->
                             <a href="#" onclick="showLogin()" class="btn btn-custom btn-lg mx-2">Iniciar Sesión</a>
-                            <a href="/auth/register" class="btn btn-outline-primary btn-lg mx-2">Registrarse</a>
+                            <a href="#" onclick="showRegister()" class="btn btn-outline-primary btn-lg mx-2">Registrarse</a>
                         </div>
                     </div>
                 </div>
