--- a/Frontend/views/login.html
+++ b/Frontend/views/login.html
@@ -87,11 +87,12 @@
             <button type="submit" class="btn login-btn text-white w-full mb-4">Iniciar sesión</button>
         </form>
 
-        <p class="text-center mt-2 text-sm">¿No tienes cuenta? <a href="/auth/register" class="text-blue-500 hover:text-blue-700">Regístrate aquí</a></p>
+        <p class="text-center mt-2 text-sm">¿No tienes cuenta? <a href="#" onclick="showRegister()" class="text-blue-500 hover:text-blue-700">Regístrate aquí</a></p>
     </div>
 
     <!-- Scripts -->
     <script src="../public/js/login.js"></script>
+    <script src="../public/js/main.js"></script>
 
     <!-- Scripts de jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
