--- a/Frontend/views/proveedor.html
+++ b/Frontend/views/proveedor.html
@@ -127,7 +127,7 @@
 
     <!-- Contenido de la página -->
     <div class="container mt-5 fade-in">
-        <h1 class="text-center mb-4 animate__animated animate__fadeInUp">Lista de Proveedores</h1>
+        <h1 class="text-center text-4xl font-bold text-blue-600 mb-4 animate__animated animate__fadeIn zoomIn">Lista de Proveedores</h1>
 
         <!-- Botón para abrir el modal de creación/edición -->
         <div class="btn-container">
