feat: actualizar versión y agregar dependencias de flyonui; mejorar lógica de cierre de sesión. Página de inicio cambiada.

--- a/Frontend/views/dashboard.html
+++ b/Frontend/views/dashboard.html
@@ -51,7 +51,7 @@
                 <a href="#" onclick="showProveedores()" class="nav-link">Gestionar Proveedores</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#" onclick="showLogout()">Cerrar sesión</a>
+                <a class="nav-link logout-link" href="#">Cerrar sesión</a>
             </li>            
         </ul>
     </nav>
